--- a/src/App.css
+++ b/src/App.css
@@ -10,55 +10,62 @@
   --color-ice-light: #e3f9ff;
 
   /* bootstrap colors */
-  --bs-background: #fbf9f6;
-  --bs-light-primary: #e4fff4;
-  --bs-active-primary: #19b674;
-  --bs-primary: #20d489;
-  --bs-light-success: #f1faff;
-  --bs-active-success: #0098da;
-  --bs-light-info: #f6f1fc;
-  --bs-active-info: #41058e;
-  --bs-info: #5710b2;
-  --bs-light-warning: #fff8dd;
-  --bs-active-warning: #f1bc00;
-  --bs-light-danger: #ffeff3;
-  --bs-active-danger: #d9214e;
-  --bs-light-dark: #eff2f5;
-  --bs-active-dark: #131628;
-  --bs-gray-100: #f5f8fa;
-  --bs-gray-200: #eff2f5;
-  --bs-gray-300: #e4e6ef;
-  --bs-gray-400: #b5b5c3;
-  --bs-gray-500: #a1a5b7;
-  --bs-gray-600: #7e8299;
-  --bs-gray-700: #5e6278;
-  --bs-gray-800: #3f4254;
-  --bs-gray-900: #181c32;
+  --bs-blue: #0d6efd;
+  --bs-indigo: #6610f2;
+  --bs-purple: #6f42c1;
+  --bs-pink: #d63384;
+  --bs-red: #dc3545;
+  --bs-orange: #fd7e14;
+  --bs-yellow: #ffc107;
+  --bs-green: #198754;
+  --bs-teal: #20c997;
+  --bs-cyan: #0dcaf0;
+  --bs-white: #fff;
+  --bs-gray: #6c757d;
+  --bs-gray-dark: #343a40;
+  --bs-primary: #0d6efd;
+  --bs-secondary: #6c757d;
+  --bs-success: #198754;
+  --bs-info: #0dcaf0;
+  --bs-warning: #ffc107;
+  --bs-danger: #dc3545;
+  --bs-light: #f8f9fa;
+  --bs-dark: #212529;
+}
+
+/* input css */
+.label {
+  font-size: 14px;
+  font-weight: bold;
+}
+
+.inputValues {
+  border-radius: 14px;
+  padding: 4px;
+  width: 100%;
+}
+
+.inputValues:focus {
+  outline: none;
+  background-color: var(--color-ice-light);
+  transition: background-color 500ms ease;
+  font-weight: bold;
 }
 
 /* btn css */
 .btn-primary {
-  background-color: var(--color-grey) !important;
-  color: var(--color-ice-light) !important;
-  border-color: var(--color-ice) !important;
+  background-color: var(--color-white) !important;
+  color: #000 !important;
+  border-color: #000 !important;
   border-radius: 12px !important;
 }
 
 .btn-primary:hover,
 .btn-primary:focus {
-  background-color: var(--color-grey-darker) !important;
+  background-color: var(--bs-gray) !important;
 }
 
 .btn-primary:active {
-  box-shadow: var(--color-ice-light) !important;
-}
-
-.btn-primary:focus {
-  box-shadow: var(--color-ice-light) !important;
-}
-
-@media (min-width: 1199.98px) {
-  #SignUp_Background {
-    height: 100vh !important;
-  }
+  background-color: var(--bs-dark) !important;
+  box-shadow: none !important;
 }
