--- a/src/styles/icons.css
+++ b/src/styles/icons.css
@@ -1,4 +1,14 @@
+/* font awesome icons */
+
 .fontIcon-custom {
   background-color: var(--color-ice-light);
   border-radius: 25px;
+}
+
+.icons-custom {
+  color: red;
+}
+
+.icons-custom:hover {
+  color: purple;
 }
