--- a/src/Forms/form.css
+++ b/src/Forms/form.css
@@ -16,12 +16,12 @@
   border-radius: 14px;
   padding: 4px;
   width: 100%;
-  border-color: gray !important;
+  border-color: var(--bs-gray-600) !important;
 }
 
 .inputValues:focus {
   outline: none;
-  border-color: var(--color-grey-darker) !important;
-  background-color: var(--color-ice-light);
+  border-color: var(--bs-gray-900) !important;
+  background-color: var(--bs-gray-200);
   transition: background-color 500ms ease;
 }
