--- a/src/styles/colors.css
+++ b/src/styles/colors.css
@@ -65,4 +65,38 @@
   --bs-gray-700: #363f55;
   --bs-gray-800: #1b1f3b;
   --bs-gray-900: #11152a;
+
+  /* primary shadows */
+  --bs-primary-shadow-100: #015297;
+  --bs-primary-shadow-200: #013b6c;
+  --bs-primary-shadow-300: #012341;
+
+  /* success shadows */
+  --bs-success-shadow-100: #408140;
+  --bs-success-shadow-200: #2e5c2e;
+  --bs-success-shadow-300: #1c371c;
+
+  /* primary shadows */
+  --bs-danger-shadow-100: #983a37;
+  --bs-danger-shadow-200: #6d2a28;
+  --bs-danger-shadow-300: #411918;
+
+  /* success shadows */
+  --bs-warning-shadow-100: #a87937;
+  --bs-warning-shadow-200: #785727;
+  --bs-warning-shadow-300: #483417;
+
+  /* inverse shadows */
+  --bs-black-shadow-100: #252728;
+  --bs-black-shadow-200: #1d1e1f;
+  --bs-black-shadow-300: #151616;
+  --bs-black-shadow-400: #0c0d0d;
+  --bs-black-shadow-500: #000;
+
+  /* faded shadows */
+  --bs-light-shadow-100: #dedede;
+  --bs-light-shadow-200: #adadad;
+  --bs-light-shadow-300: #7c7c7c;
+  --bs-light-shadow-400: #4a4a4a;
+  --bs-light-shadow-500: #fff;
 }
