--- a/src/App.css
+++ b/src/App.css
@@ -104,3 +104,31 @@
   justify-content: center;
   align-items: center;
 }
+
+/* results CSS-scrollbar */
+.comments-div {
+  overflow-y: auto;
+  overflow-x: auto;
+}
+
+/* width */
+::-webkit-scrollbar {
+  width: 20px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey;
+  border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: var(--bs-danger);
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #c12e3c;
+}
