--- a/src/App.css
+++ b/src/App.css
@@ -98,8 +98,8 @@
 
 /* loader css */
 .loader-outerdiv {
-  min-height: 100vh;
-  background-color: var(--bs-light);
+  min-height: 85vh;
+  /* background-color: var(--bs-light); */
   display: flex;
   justify-content: center;
   align-items: center;
