--- a/src/screens/screens.css
+++ b/src/screens/screens.css
@@ -37,14 +37,26 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+  background-attachment: fixed;
 }
 
 @media (max-width: 576px) {
+  .outer-indexdiv {
+    background-image: url("../assets/IndexScreen_resp_img.jpg");
+  }
+
   #outerMainDiv {
     display: inline-block !important;
   }
+
   .inner-maindiv {
     min-height: 0vh;
     min-width: 100vw;
+  }
+  #IndexTabsForLargeScreen {
+    display: none !important;
+  }
+  #firstButtonMargin {
+    margin-top: 30px;
   }
 }
