--- a/src/screens/screens.css
+++ b/src/screens/screens.css
@@ -48,6 +48,11 @@
   border-radius: 1rem;
 }
 
+.metrics-average {
+  background-color: var(--bs-gray-200);
+  border-radius: 6px;
+}
+
 @media (max-width: 576px) {
   .outer-indexdiv {
     background-image: url("../assets/IndexScreen_resp_img.jpg");
