--- a/src/screens/screens.css
+++ b/src/screens/screens.css
@@ -72,4 +72,13 @@
   #firstButtonMargin {
     margin-top: 30px;
   }
+  #metricsSelect1 {
+    min-width: 100vw;
+  }
+  #metricsSelect2 {
+    min-width: 100vw;
+  }
+  #metricsSelect3 {
+    min-width: 100vw;
+  }
 }
