--- a/src/screens/screens.css
+++ b/src/screens/screens.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Lobster&display=swap");
+
 /* SignUpScreen */
 .outer-SignUpDiv {
   background-color: var(--bs-primary-500);
@@ -38,4 +40,9 @@
   background-position: center;
   background-size: cover;
   background-attachment: fixed;
+}
+
+.appName-style {
+  font-family: "Lobster", cursive;
+  font-size: 36px;
 }
